# cdt-qt

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: cdt-qt_test.cpp
